--- a/training/phylogenny_training.Rmd
+++ b/training/phylogenny_training.Rmd
@@ -52,6 +52,7 @@ head(X)
 ```
 \ Making state matrix to simmap
 ```{r}
+library(limSolve)
 onehotencoder = function(data, index){
     nlvls = nlevels(data[, index])
     onehot = matrix(0, nrow = nrow(data), ncol = nlvls)
@@ -68,7 +69,9 @@ onehotencoder = function(data, index){
     return(onehot)
 }
 feed.mode = onehotencoder(X, 1)
-fit_discrete = make.simmap(elop.tree, feed.mode, model = "ARD")
+fit_discrete = make.simmap(elop.tree, feed.mode, model = "ARD", pi = "estimated")
+xranges(G = t(as.matrix(fit_discrete$Q)), F = rep(1, 2), E = matrix(1, ncol = nrow(fit_discrete$Q), nrow = nrow(fit_discrete$Q)),
+        H = c(0, 0))[, 1]
 ```
 ```{r}
 mtree
@@ -95,12 +98,23 @@ max.tl = setNames(X[, 2], rownames(X))
 
 del.ind = match(NA, max.tl)
 new_max.tl = max.tl[-del.ind]
+del.ind_1 = match(NA, new_max.tl)
+new_max.tl = new_max.tl[-del.ind]
+del.ind_2 = match(NA, new_max.tl)
+new_max.tl = new_max.tl[-del.ind_2]
+del.ind_3 = match(NA, new_max.tl)
+new_max.tl = new_max.tl[-del.ind_3]
 new_max.tl
 ```
 ```{r}
-fit = anc.ML(elop.tree, new_max.tl, model = "BM")
+fit = anc.ML(elop.tree, new_max.tl, model = "BM", tol = 1e-30)
 fit$missing.x
+fit$sig2
 ```
+```{r}
+plot(elop.tree)
+```
+
 \ 
 All of this information above is related to a maximum likelihood estimation of the continuous character for each internal nodes of the given tree. We can plot a gradient tree as below:
 ```{r}
