--- a/training/cv_score_tests.Rmd
+++ b/training/cv_score_tests.Rmd
@@ -6,7 +6,8 @@ output: html_document
 ---
 ```{r global_options, message=FALSE, include=FALSE}
 ```
-```{r message = FALSE, include = FALSE}
+Importing needed packages
+```{r message = FALSE}
 library(ape)
 library(dendextend)
 library(cluster)
@@ -18,9 +19,10 @@ library(limSolve)
 library(mltools)
 library(data.table)
 library(factoextra)
-source("convert_to_parenthesis.R")
-source("cv_score.R")
+source("C:/Users/lucru/Estatística_UFSCar/cv_cluster/modules/convert_to_parenthesis.R")
 library(tictoc)
+library(Rphylopars)
+library(mvMORPH)
 ```
 Generating some data and testing the continuous score:
 ```{r}
@@ -47,8 +49,16 @@ No difference. So, we use the above dendrogram and each $X_i$ to make the predic
 ```{r}
 var_1 = data.sim$x1
 var_1[3] = NA
+species = row.names(data.sim)
+data1 = data.frame("species" = species)
+mat = matrix(rep(data.sim$x1, nrow(data.sim)), nrow = nrow(data.sim), ncol = nrow(data.sim))
+diag(mat) = rep(NA, nrow(data.sim))
+data2 =  as.data.frame(mat)
+new_data = cbind(data1, data2)
+row.names(data.var) = row.names(data.sim)
 names(var_1) = row.names(data.sim)
 var_1
+new_data
 ```
 Removing NA index
 ```{r}
@@ -60,6 +70,12 @@ And now, testing in anc.ML:
 ```{r}
 fit = anc.ML(sim.test, new.var_1, model = "BM")
 fit$missing.x
+fit2 = phylopars(new_data, sim.test, phylo_correlated = FALSE, pheno_correlated = FALSE,
+                 REML = FALSE)
+estim = fit2$anc_recon
+estim = estim[as.character(sort(as.numeric(row.names(estim)))),]
+missing = diag(estim[1:nrow(data.sim), 1:nrow(data.sim)])
+missing
 ```
 Designing test function:
 ```{r}
@@ -85,10 +101,10 @@ and for $X_3$:
 ```{r}
 test_cont(data.sim, 3, 3, sim.test)
 ```
-Now simulating with a bigger $n$:
+Now simulating with a bigger $n$ and testing other functions:
 ```{r}
 set.seed(99)
-n = 60
+n = 350
 new_data.sim =  data.frame("x1" = rnorm(n, 2, 1),
                        "x2" = runif(n, 3, 6),
                        "x3" = rexp(n))
@@ -106,6 +122,91 @@ With normal plot:
 ```{r}
 plot(sim.test)
 ```
+\
+Testing *Phylopars* function:
+```{r}
+species = row.names(new_data.sim)
+data1 = data.frame("species" = species)
+mat = matrix(rep(data.sim$x1, nrow(new_data.sim)), nrow = nrow(new_data.sim), 
+             ncol = nrow(new_data.sim))
+diag(mat) = rep(NA, nrow(new_data.sim))
+data2 =  as.data.frame(mat)
+new_data = cbind(data1, data2)
+new_data[, c(1,2)]
+```
+```{r}
+tic("Phylopars time:")
+fit2 = phylopars(new_data, sim.test, phylo_correlated = FALSE, pheno_correlated = FALSE,
+                 REML = FALSE)
+estim = fit2$anc_recon
+estim = estim[as.character(sort(as.numeric(row.names(estim)))),]
+estim
+toc()
+```
+Testing *mvMORPH* fitting only one column:
+```{r}
+# fitting a phylogenetic model
+tic("Running time of fitting")
+fit = mvBM(sim.test, as.data.frame(new_data.sim[, 1]), model = "BMM")
+toc()
+```
+Then estimating some missing states:
+```{r}
+mat = as.matrix(new_data.sim[, 1])
+mat[1,1] = rep(NA, 1)
+colnames(mat) = colnames(new_data.sim)[1]
+head(mat)
+```
+```{r}
+tic("Running time of a single imputation")
+imp = estim(sim.test, mat, fit)
+imp$estimates[imp$NA_index, 1]
+imp$var[]
+```
+Making vector of estimatives and variances
+```{r}
+estims = numeric(nrow(new_data.sim))
+vars = numeric(nrow(new_data.sim))
+# assessing the running time of a loop using the above function
+tic("Time of a loop in function")
+for(i in (1:nrow(new_data.sim))){
+  mat = as.matrix(new_data.sim[, 1])
+  colnames(mat) = colnames(new_data.sim)[1]
+  mat[i, 1] = NA
+  imp = estim(sim.test, mat, fit)
+  estims[i] = imp$estimates[imp$NA_index, 1]
+  vars[i] = imp$var[imp$NA_index]
+}
+toc()
+head(estims)
+head(vars)
+```
+Now, testing the same but using more data:
+```{r}
+tic("Running time of fitting")
+fit = mvBM(sim.test, new_data.sim, model = "BMM")
+toc()
+```
+Estimating missing state for column one:
+```{r}
+estims = numeric(nrow(new_data.sim))
+vars = numeric(nrow(new_data.sim))
+# assessing the running time of a loop using the above function
+tic("Time of a loop in function")
+for(i in (1:nrow(new_data.sim))){
+  mat = as.matrix(new_data.sim)
+  colnames(mat) = colnames(new_data.sim)
+  mat[i, 1] = NA
+  imp = estim(sim.test, mat, fit)
+  estims[i] = imp$estimates[imp$NA_index, 1]
+  vars[i] = imp$var[imp$NA_index]
+}
+toc()
+head(estims)
+head(vars)
+```
+It seems that doing just by one state is better than multivariate in matters of time. Now
+
 Assessing number of cores:
 ```{r}
 cores = detectCores()
@@ -124,24 +225,69 @@ For $X_3$:
 ```{r}
 test_cont(new_data.sim, 3, 3, sim.test)
 ```
-It seems to work, lets test our scoring function parallelized and serialized:
+Simulating mixed data:
+```{r}
+n = 250
+set.seed(125)
+data.sim = data.frame("x1" = rnorm(n, 2, 1),
+                      "x2" = runif(n , 3, 6),
+                      "x3" = factor(sample(c(1,2,3), n, replace = TRUE)))
+head(data.sim)
+```
+Fitting to phylogenetic model
+```{r}
+d =  daisy(data.sim, metric = "gower")
+
+sim.hc = hclust(d)
+dend.hc = to.dend(sim.hc)
+test = convert_to_par(dend.hc)
+sim.tree = read.tree(text = test)
+
+
+tic("Running time of fitting")
+fit = mvBM(sim.tree, data.sim, model = "BMM")
+toc()
+```
+
+```{r}
+mat = data.sim
+mat[1,3] = NA
+head(mat)
+```
+```{r}
+tic("Running time of a single imputation")
+imp = estim(sim.tree, mat, fit)
+imp$estimates[1, 3]
+```
+It seems to work, lets test our scoring function parallelized with anc.ML, serialized and parallelized with mvMORPH:
 ```{r}
 
 set.seed(99)
-n = 60
+n = 100
 data.sim =  data.frame("x1" = rnorm(n, 2, 1),
                        "x2" = runif(n, 3, 6),
                        "x3" = rexp(n))
 
-# using hierarchical clustering
+# using agnes clustering
+sim.agnes = agnes(scale(data.sim))
+dend.agnes = to.dend(sim.agnes)
+test = convert_to_par(dend.agnes)
+sim.test= read.tree(text = test)
 
-tic("Scoring time for simulated data")
-final_score = L_score(sim.test, new_data.sim)
+tic("Scoring time for simulated data 3")
+final_score3 = L_score_3(sim.test, data.sim)
+final_score3
+toc()
+
+
+tic("Scoring time for simulated data 1")
+final_score = L_score(sim.test, data.sim)
 final_score
 toc()
 
+
 tic("Scoring time for simulated data 2")
-final_score2 = L_score(sim.test,new_data.sim)
+final_score2 = L_score_2(sim.test,data.sim)
 final_score2
 toc()
 
